fix order and syntax